# cuberenderer

./: .gitignore  README.md  build.sh  index.html  index.js  serve.go  sw.js
rendering/: Cargo.toml
rendering/src/: lib.rs
www/: background.js  index.html  index.js  manifest.json  sw.js  touchlistener.js
