[package]
name = "rendering"
version = "0.1.0"
authors = ["Timothy Stander <20standtimt@washk12.org>"]
description = "A sample project with wasm-pack"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.47"
console_error_panic_hook = "0.1.6"